navbar conditionality complete

--- a/src/components/Nav/index.css
+++ b/src/components/Nav/index.css
@@ -11,3 +11,7 @@
     /* border: 2px solid rgb(179, 182, 36);
     border-radius: 40%; */
 }
+#avatar{
+    width: 2rem;
+    margin-left: 0.5rem ;
+}
