--- a/src/pages/Profile/index.css
+++ b/src/pages/Profile/index.css
@@ -1,5 +1,5 @@
 #main-profile{
     display: grid;
     min-height: 91vh;
-    grid-template-columns: 21.5% 78.5% ;
+    /* grid-template-columns: 21.5% 78.5% ; */
 }
